--- a/src/bin/pg_ctl/po/ja.po
+++ b/src/bin/pg_ctl/po/ja.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: pg_ctl (PostgreSQL 13)\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2020-08-21 15:54+0900\n"
-"PO-Revision-Date: 2020-08-21 23:23+0900\n"
+"PO-Revision-Date: 2022-08-09 09:47+0900\n"
 "Last-Translator: Kyotaro Horiguchi <horikyota.ntt@gmail.com>\n"
 "Language-Team: Japan PostgreSQL Users Group <jpug-doc@ml.postgresql.jp>\n"
 "Language: ja\n"
@@ -225,7 +225,7 @@ msgstr " 待機処理が停止されました\n"
 #: pg_ctl.c:925
 #, c-format
 msgid "%s: server did not start in time\n"
-msgstr "%s: サーバは時間内に停止しませんでした\n"
+msgstr "%s: サーバは時間内に起動しませんでした\n"
 
 #: pg_ctl.c:931
 #, c-format
