--- a/src/interfaces/ecpg/ecpglib/po/es.po
+++ b/src/interfaces/ecpg/ecpglib/po/es.po
@@ -7,10 +7,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: ecpglib (PostgreSQL) 14\n"
+"Project-Id-Version: ecpglib (PostgreSQL) 15\n"
 "Report-Msgid-Bugs-To: pgsql-bugs@lists.postgresql.org\n"
 "POT-Creation-Date: 2022-09-24 23:09+0000\n"
-"PO-Revision-Date: 2019-06-06 17:20-0400\n"
+"PO-Revision-Date: 2022-10-20 09:05+0200\n"
 "Last-Translator: Emanuel Calvo Franco <postgres-arg@gmail.com>\n"
 "Language-Team: PgSQL-es-Ayuda <pgsql-es-ayuda@lists.postgresql.org>\n"
 "Language: es\n"
